--- a/static/sass/pages/_login.scss
+++ b/static/sass/pages/_login.scss
@@ -13,6 +13,7 @@
     &__container {
         width: 50%;
         height: 500px;
+        outline:0;
 
         position: absolute;
         right: 25%;
