--- a/static/sass/base/_typography.scss
+++ b/static/sass/base/_typography.scss
@@ -14,7 +14,7 @@
 // HYPERLINKS
 a {
     text-decoration: none;
-    color:black;
+    
     outline: 0;
     border: none;
     -moz-outline-style: none;
@@ -154,5 +154,5 @@ a.navbar__logo {
     font-family: 'Major Mono Display', monospace;
     font-size: 1.5rem; 
     margin: 20px;  
-    font-weight: bold;
+    // font-weight: bold;
 }
