--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <!-- STYLESHEET -->
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     <!-- SCRIPT -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/fontawesome.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
     <title>{% block title %}{% endblock %}</title>
@@ -21,6 +22,7 @@
 <body>
 {% block content %}
 {% endblock %}
+<script src="../static/js/dashboard.js"></script>
 <script src="../static/js/time.js"></script>
 </body>
 </html>
