Added the5, and searchbar

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,27 @@
         <div class="navbar__links">
             <a class="navbar__links--login" href="/login">Login</a>
         </div>
+
     </div>
 </header>
 
 <body class="homepage">
-    <section class="datetime">
+    <div class="datetime"></div>
+    <div class="spacer">&nbsp;</div>
+    <div class="the5">
+        <h2> Do the Five.</h2>
+        <div class="the5__items">          
+               <i class="fas fa-house-user fa-2x"></i>&nbsp; Stay Home &nbsp;
+               <i class="fas fa-people-arrows fa-2x"></i>&nbsp; Keep 3ft Away &nbsp;
+               <i class="fas fa-hands-wash fa-2x"></i>&nbsp; Wash Hands &nbsp;
+               <i class="fas fa-head-side-cough-slash fa-2x"></i>&nbsp; Dab When You Cough &nbsp;
+               <i class="fas fa-phone-alt fa-2x"></i>&nbsp; Call in Sick &nbsp;
+        </div>
+    </div>
+    <div class="searchbar">
+       <input class="searchbar__search" type="text" placeholder="Search a city:">
+    </div>
         
-    </section>
+ 
 </body>
 {% endblock %}
