--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,8 @@
 
     <!-- STYLESHEET -->
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"></link>
     <!-- SCRIPT -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/fontawesome.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
     <title>{% block title %}{% endblock %}</title>
