--- a/static/sass/pages/_signup.scss
+++ b/static/sass/pages/_signup.scss
@@ -70,6 +70,13 @@ input.form__item{
         grid-area: item3    
     }
     &--btn {
+        font-family: 'Raleway', sans-serif;
+        font-weight: bolder;
+        color: darken($color-1, 5%);
+        font-size: 1.2rem;
+        text-transform: uppercase;
+        letter-spacing: .3rem;
+
         margin-top: 1rem;
         grid-area: button;
         background: white;
@@ -78,6 +85,7 @@ input.form__item{
         width: 100%;
         justify-self: center;
         height: 4rem; 
+        
         &:focus {
             outline:none;
         }
@@ -85,7 +93,14 @@ input.form__item{
             box-shadow: 5px 6px 1px 3px #384d6e;
         }
     }
+
     &--4 {
+        text-align: center;
+        font-size: 1.3rem;
+        font-family: 'Raleway', sans-serif;
+        color: white;
+        letter-spacing: .1rem;
+        
         grid-area: item4;
         margin-top: 1rem;
     }   
