--- a/static/sass/pages/_homepage.scss
+++ b/static/sass/pages/_homepage.scss
@@ -9,19 +9,24 @@
 // font-family: 'Major Mono Display', monospace;
 // font-family: 'Courier Prime', monospace;
 // font-family: 'Montserrat', sans-serif;
-
+.alert-message {
+    text-align: center;
+    font-family: 'Major Mono Display', monospace;
+    text-transform: lowercase;
+    letter-spacing: .2rem;
+}
 .searchbar {
     text-align: center;
-    margin: 70px 0;
+    margin: 100px 0;
     text-transform: lowercase;
 
     &__search {
         font-family: 'Major Mono Display', monospace;
-        width: 50%;
+        width: 70rem;
         font-size: 2rem;
         outline:0;
         border: 0;
-        border-bottom: 2px solid black;
+        border-bottom: 2px dotted rgba(0, 0, 0, 0.288);
 
         &::placeholder {
             text-transform: lowercase;
@@ -29,14 +34,14 @@
             font-weight: bold;
         }
         &:focus {
-            border-bottom: 2px solid $color-2;
+            border-bottom: 2px dotted $color-2;
         }     
     }
 }
 
 .spacer{
     width: 100%;
-    height: 90px;
+    height: 200px;
 }
 
 .the5 {
@@ -53,7 +58,7 @@ ul{list-style-type: none;}
 
 .datetime {
     font-family: 'Major Mono Display', monospace;
-    font-size: 1.5rem; 
+    font-size: 1.2rem; 
     margin: 20px;  
     // font-weight: bold;
 
