--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,7 +7,7 @@
         <i class="fas fa-bars"></i>
       </div>
   <header class="header">
-    <div class="header__time">TIME/DATE</div>
+    <div class="header__time">{{ current_date }}</div>
     <a class="header__logout" href="/logout">Logout</a>
   </header>
 
@@ -21,18 +21,16 @@
         <div class="sidenav__category-title">Tracking</div>
   
        <ul class="sidenav__list">
-          <li class="sidenav__list-item">Item One</li>
-          <li class="sidenav__list-item">Item Two</li>
-          <li class="sidenav__list-item">Item Three</li>
-          <li class="sidenav__list-item">Item Four</li>
-          <li class="sidenav__list-item">Item Five</li>
+          <li class="sidenav__list-item">San Francisco, CA</li>
+          <li class="sidenav__list-item">San Jose, CA</li>
+          <li class="sidenav__list-item">Atlanta, GA</li>
         </ul>
     </div>
   </aside>
 
   <main class="main">
     <div class="main-header">
-      <div class="main-header__heading">Hello User</div>
+      <div class="main-header__heading">Hello {{username}}! </div>
       <div class="main-header__updates">Recent Items</div>
     </div>
     <div class="main-content">
