--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -23,14 +23,14 @@
        <ul class="sidenav__list">
           <li class="sidenav__list-item">San Francisco, CA</li>
           <li class="sidenav__list-item">San Jose, CA</li>
-          <li class="sidenav__list-item">Atlanta, GA</li>
+          <li class="sidenav__list-item">Valdosta, GA</li>
         </ul>
     </div>
   </aside>
 
   <main class="main">
     <div class="main-header">
-      <div class="main-header__heading">Hello {{username}}! </div>
+      <div class="main-header__heading">Hello {{username.title()}}! </div>
       <div class="main-header__updates">Recent Items</div>
     </div>
     <div class="main-content">
