--- a/templates/index.html
+++ b/templates/index.html
@@ -33,14 +33,16 @@
         <h2> Do the Five.</h2>
         <div class="the5__items">          
             <i class="fas fa-house-user fa-2x"></i>&nbsp; Stay Home &nbsp;
-            <i class="fas fa-people-arrows fa-2x"></i>&nbsp; Keep 3ft Away &nbsp;
+            <i class="fas fa-people-arrows fa-2x"></i>&nbsp; Keep 6ft Away &nbsp;
             <i class="fas fa-hands-wash fa-2x"></i>&nbsp; Wash Hands &nbsp;
             <i class="fas fa-head-side-cough-slash fa-2x"></i>&nbsp; Dab When You Cough &nbsp;
             <i class="fas fa-phone-alt fa-2x"></i>&nbsp; Call in Sick &nbsp;
         </div>
     </div>
     <div class="searchbar">
-    <input class="searchbar__search" type="text" placeholder="Search a city:">
+        <form class="searchbar__form" action="/search-results" method="POST">
+            <input class="searchbar__search" action="/search-results" type="text" name="searchbar" placeholder="Enter a city:">
+        </form>
     </div>
     <div class="spacer"></div>
  
