--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,6 +1,30 @@
 {% extends 'base.html' %}
 {% block title %}Search Results{% endblock %}
 {% block content %}
+<header>
+    <div class="navbar">
+        <div class="navbar__logo">
+            <h1><a class="navbar__logo--link" href="/">COVID-19 Status</a></h1>
+        </div>
+
+        {% if session.get('username') %}
+        <div class="navbar__links">
+            <a class="navbar__links--login" href="/user/{{session['username'].lower()}}">{{ session['username'].upper() }}</a>
+        </div>
+        {% else %}
+        <div class="navbar__links">
+            <a class="navbar__links--login" href="/login">Login</a>
+        </div>
+        {% endif %}
+    </div>
+    
+    {% for message in get_flashed_messages() %}
+        <div class="alert-message">
+            <b> {{ message }} </b>
+        </div>
+    {% endfor %}
+</header>
+
     {% for city in cities %}
         {{ city.city_name}}
     {% endfor %}
