--- a/static/sass/base/_utilities.scss
+++ b/static/sass/base/_utilities.scss
@@ -2,3 +2,6 @@
 .u-font-blue {color: $color-1;}
 .u-font-white {color:white;}
 .u-text-center {text-align: center;}
+.u-spacer-l {height: 200px;}
+.u-spacer-m {height:100px;}
+.u-spacer-s {height:50px;}
