--- a/static/sass/components/_navbar.scss
+++ b/static/sass/components/_navbar.scss
@@ -36,8 +36,10 @@ a.navbar__logo {
         font-size: 20px;
 
         &--login {
-            font-family: 'Comfortaa', cursive;
+            font-family: 'Raleway', sans-serif;
             font-size: 1.2rem;
+            text-transform: uppercase;
+            font-weight: bold;
         }
     }
 }
