--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 
 <body class="homepage">
     <div class="datetime"></div>
-    <div class="spacer">&nbsp;</div>
+    <div class="u-spacer-l">&nbsp;</div>
     <div class="the5">
         <h2> Do the Five.</h2>
         <div class="the5__items">          
@@ -44,7 +44,7 @@
             <input class="searchbar__search" action="/search-results" type="text" name="searchbar" placeholder="Enter a city:">
         </form>
     </div>
-    <div class="spacer"></div>
+
  
 </body>
 {% endblock %}
