--- a/static/sass/pages/_homepage.scss
+++ b/static/sass/pages/_homepage.scss
@@ -27,6 +27,7 @@
         outline:0;
         border: 0;
         border-bottom: 2px dotted rgba(0, 0, 0, 0.288);
+        text-transform: lowercase;
 
         &::placeholder {
             text-transform: lowercase;
@@ -40,10 +41,7 @@
     }
 }
 
-.spacer{
-    width: 100%;
-    height: 200px;
-}
+
 
 .the5 {
     font-family: 'Fredoka One', cursive;
