--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -6,6 +6,7 @@
 @import "base/utilities";
 
 @import "components/navbar";
+@import "components/graph";
 
 @import "pages/signup";
 @import "pages/login";
